--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -71,6 +71,10 @@ iconType: "regular"
   - **API v2**: Will be deprecated on January 15th, 2026. We strongly encourage all teams and integrators to migrate to v3 endpoints before that date to take advantage of the improved OES accuracy and scoring system.
 
   We recommend upgrading to API v3 at your earliest convenience to benefit from the enhanced OES v3 quality checks and improved scoring accuracy.
+
+  <Warning>
+  **Important:** You cannot upgrade the API version for a survey that is currently running. Each survey is permanently tied to the API version it was created with. To use a newer API version, you must create a new survey with the updated endpoints. See the [Migration Guide](/api-reference/others/migration-guide) for step-by-step instructions.
+  </Warning>
 </Update>
 
 <Update label="2025-11-17" description="v2.2.0">
@@ -127,6 +131,10 @@ iconType: "regular"
   Version 1 of the ReDem API will be **deprecated starting 16th September 2025**.
 
   We strongly encourage all teams and integrators to migrate to v2 endpoints before that date to avoid any disruption.
+
+  <Warning>
+  **Important:** You cannot upgrade the API version for a survey that is currently running. Each survey is permanently tied to the API version it was created with. To use a newer API version, you must create a new survey with the updated endpoints. See the [Migration Guide](/api-reference/others/migration-guide) for step-by-step instructions.
+  </Warning>
   
 </Update>
 
