--- a/changelogs/application-change-log.mdx
+++ b/changelogs/application-change-log.mdx
@@ -5,6 +5,17 @@ icon: "bullhorn"
 iconType: "regular"
 ---
 
+<Update label="2026-02-09" description="v1.4.6">
+  ## CHS Import Assistant
+  - Configuring the CHS for the manual import is now easier than ever before. Instead of selecting individual questions, you can now select full groups of questions that belong together.
+  ## Downloading Survey Results
+  - The export for larger surveys will now be sent via email to you. This way you don't have to wait on the page for the export to be ready.
+  ## Minor improvements
+  - The manual import loading indicator is now more intuitive.
+  - Solved an issue where an error screen appeared after not using the app for a while.
+
+</Update>
+
 <Update label="2026-01-29" description="v1.4.5">
   ## New Attribute: Survey Description for CHS
   - You can now add a `surveyDescription` when submitting CHS data points to provide context about the survey’s purpose and intent. This increases the precision of the CHS. Find more information see the [Coherence Score docs](/knowledge-base/quality-checks/coherence-score) and the [API docs](/api-reference/endpoints/v3/addRespondent).
