--- a/changelogs/api-change-log.mdx
+++ b/changelogs/api-change-log.mdx
@@ -8,7 +8,7 @@ iconType: "regular"
 <Update label="2026-02-26" description="v3.1.3">
   ## CHS Limit Update
 
-  - <code style={{ color: "green" }}> POST /v3/addRespondent </code> - The maximum number of CHS question/answer pairs stored on create has been reduced from `1000` to `300`.
+  - <code style={{ color: "green" }}> POST /v3/addRespondent </code> - The maximum number of CHS question/answer pairs has been reduced from `1000` to `300`.
 
   Recommendation for integrators:
   - Send only the most relevant `interviewData` entries (up to 300) in a deterministic order.
